--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -17,7 +17,7 @@
                             <div class="text-center text-md-center mb-4 mt-md-0">
                                 <h1 class="mb-0 h3">
                                     <a target="_blank"
-                                       href="https://appseed.us/admin-dashboards/django-dashboard-volt">Django Volt</a> - Sign IN
+                                       href="">MedERP</a> - Sign IN
                                 </h1>
                                 <br />
                                 <p>
@@ -69,12 +69,12 @@
                                 </div>
                             </form>
 
-                            <div class="d-flex justify-content-center align-items-center mt-4">
+                            <!-- <div class="d-flex justify-content-center align-items-center mt-4">
                                 <span class="font-weight-normal">
                                     &copy; <a  href="https://themesberg.com" target="_blank">Themesberg</a> 
                                     - coded by <a target="_blank" href="https://appseed.us">AppSeed</a>
                                 </span>
-                            </div>
+                            </div> -->
 
                         </div>
                     </div>
