--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -34,6 +34,24 @@
             <span class="sidebar-text">Dashboard</span>
           </a>
         </li>
+        <li class="nav-item {% if 'dashboard1' in segment %} active {% endif %}">
+          <a href="/dashboard.html" class="nav-link">
+            <span class="sidebar-icon"><span class="fas fa-chart-pie"></span></span>
+            <span class="sidebar-text">Dashboard</span>
+          </a>
+        </li>
+        <li class="nav-item {% if 'dashboard2' in segment %} active {% endif %}">
+          <a href="/dashboard.html" class="nav-link">
+            <span class="sidebar-icon"><span class="fas fa-chart-pie"></span></span>
+            <span class="sidebar-text">Dashboard</span>
+          </a>
+        </li>
+        <li class="nav-item {% if 'dashboard3' in segment %} active {% endif %}">
+          <a href="/dashboard.html" class="nav-link">
+            <span class="sidebar-icon"><span class="fas fa-chart-pie"></span></span>
+            <span class="sidebar-text">Dashboard</span>
+          </a>
+        </li>
         <li class="nav-item {% if 'transactions' in segment %} active {% endif %}">
           <a href="/transactions.html" class="nav-link">
             <span class="sidebar-icon"><span class="fas fa-hand-holding-usd"></span></span>
